--- a/src/components/contacts/style.module.css
+++ b/src/components/contacts/style.module.css
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  margin: 0 auto;
   width: 300px;
+  padding: 0;
 }
 .btn {
   margin-left: 5px;
