--- a/src/index.module.css
+++ b/src/index.module.css
@@ -13,3 +13,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.app{
+    margin: 0 auto;
+    width: 300px;
+}
